--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ production:
  encoding: utf8
  host: localhost
  port: 5432
- database: myapp_test
+ database: myapp_production
  pool: 5
  username: postgres
  password: 123
